@@ -52,28 +52,4 @@ if (!function_exists('zen_href_link')) {
     }
     function zm_get_discount_calc($arg1, $args2, $arg3) { return zen_get_discount_calc($arg1, $args2, $arg3); }
 
-    // get online counter
-    function zm_get_online_counts() {
-    global $db;
-
-        // expire
-        $timeAgo = (time() - 1200);
-        $sql = "delete from " . TABLE_WHOS_ONLINE . "
-                where time_last_click < :timeAgo";
-        $sql = $db->bindVars($sql, ":timeAgo", $timeAgo, 'integer');
-        $db->Execute($sql);
-
-        $sql = "select customer_id from " . TABLE_WHOS_ONLINE;
-        $results = $db->Execute($sql);
-        $guests = 0;
-        $members = 0;
-        while (!$results->EOF) {
-            if (!$results->fields['customer_id'] == 0) $members++;
-            if ($results->fields['customer_id'] == 0) $guests++;
-            $results->MoveNext();
-        }
-
-        return array(($guests+$members), $guests, $members);
-    }
-
 ?>
