@@ -70,6 +70,7 @@ Release 0.9.2
 - make ZMRegexpRule pass if field is empty
 - reimplement SQL in ZMOffers using the already loaded product / attribute
   data
+- deprecate zm_get_online_counts()
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
